--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,31 @@
 body {
   font-family: 'Inter', sans-serif;
 }
+.dark {
+  color: #F3F2F0;
+  background-color: #232326;
+}
+.wrapper {
+  max-width: 1140px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
 .name {
   font-size: 28px;
 }
 .title-h1 {
   font-size: 74px;
   text-transform: uppercase;
+}
+.photo {
+  margin-bottom: 120px;
+}
+.nav-link {
+  text-decoration: none;
+  color: #F3F2F0;
+  font-size: 14px;
+}
+.nav-link:hover {
+  color: #D40000;
 }
