--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,13 @@ body {
 .dark .triangle path {
   fill: #fff;
 }
+.dark .steps-item,
+.dark .social {
+  border-bottom: 1px solid #F3F2F0;
+}
+.dark .steps-item:first-child {
+  border-top: 1px solid #F3F2F0;
+}
 .light .circle circle {
   fill: #fff;
 }
@@ -27,6 +34,16 @@ body {
 .light {
   color: #010101;
   background-color: #F3F2F0;
+}
+.light .social {
+  border-bottom: 1px solid #010101;
+}
+.light .steps-item,
+.light .social {
+  border-bottom: 1px solid #010101;
+}
+.light .steps-item:first-child {
+  border-top: 1px solid #010101;
 }
 .wrapper {
   max-width: 1140px;
@@ -106,8 +123,9 @@ header {
 .social {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 60px;
+  padding-bottom: 60px;
   margin-top: 100px;
+  border-bottom: 1px solid #F3F2F0;
 }
 .social-item:last-child {
 position: relative;
@@ -129,9 +147,10 @@ position: relative;
 .skill {
   display: flex;
   justify-content: space-between;
+  padding-top: 60px;
 }
 .skill-item {
-  flex: 0 0 24%;
+  flex: 0 0 21%;
 }
 .skill .title-h3 {
   text-transform: uppercase;
@@ -169,6 +188,8 @@ position: relative;
   justify-content: space-between;
   align-items: center;
   line-height: 150%;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 .steps-title {
   font-size: 28px;
@@ -178,4 +199,6 @@ position: relative;
 }
 .steps-description {
   font-size: 16px;
+  flex: 0 0 49%;
+  max-width: 49%;
 }
