--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,9 @@ body {
   fill: #fff;
 }
 .dark .steps-item,
-.dark .social {
+.dark .social,
+.dark .about-title,
+.dark .about-description {
   border-bottom: 1px solid #F3F2F0;
 }
 .dark .steps-item:first-child {
@@ -39,7 +41,9 @@ body {
   border-bottom: 1px solid #010101;
 }
 .light .steps-item,
-.light .social {
+.light .social,
+.light .about-title,
+.light .about-description {
   border-bottom: 1px solid #010101;
 }
 .light .steps-item:first-child {
@@ -201,4 +205,51 @@ position: relative;
   font-size: 16px;
   flex: 0 0 49%;
   max-width: 49%;
+}
+.about {
+  display: grid;
+  grid-template: repeat(3, 1fr)/repeat(4, 1fr);
+}
+.about-title {
+  grid-column: 1/3;
+  grid-row: 1/2;
+  font-size: 28px;
+  line-height: 150%;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding-top: 62px;
+  padding-bottom: 62px;
+}
+.about-description {
+  grid-column: 3/5;
+  grid-row: 1/2;
+  font-size: 28px;
+  line-height: 150%;
+  opacity: 0.8;
+  padding: 62px 10px 62px 20px;
+}
+.about-01 {
+  grid-column: 3/4;
+  grid-row: 2/3;
+  padding: 65px 20px 35px 20px;
+}
+.about-02 {
+  grid-column: 4/5;
+  grid-row: 2/3;
+  padding: 65px 10px 35px 10px;
+}
+.about-03 {
+  grid-column: 3/4;
+  grid-row: 3/4;
+  padding: 35px 20px;
+}
+.about-04 {
+  grid-column: 4/5;
+  grid-row: 3/4;
+  padding: 35px 10px 35px 10px;
+}
+.about .description {
+  line-height: 150%;
+  opacity: 0.8;
 }
