--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,8 @@ body {
 .main .title-h1 {
   position: relative;
   z-index: 3;
+  margin-top: 37px;
+  letter-spacing: 0.03em;
 }
 .title-h1 {
   font-size: 74px;
@@ -76,14 +78,14 @@ body {
   font-weight: 700;
 }
 .photo {
-  margin-bottom: 120px;
+  margin-bottom: 95px;
   width: 100%;
 }
 header {
   display: flex;
   justify-content: space-between;
-  padding-top: 40px;
-  padding-bottom: 60px;
+  padding-top: 44px;
+  padding-bottom: 64px;
 }
 .nav {
   list-style-type: none;
@@ -92,8 +94,8 @@ header {
   display: flex;
 }
 .nav-item {
-  padding-left: 16px;
-  padding-right: 16px;
+  padding-left: 14px;
+  padding-right: 14px;
 }
 .nav-item:first-child {
   padding-left: 0;
@@ -104,6 +106,7 @@ header {
 .nav-link {
   text-decoration: none;
   font-size: 14px;
+  transition: 0.2s color ease;
 }
 .nav-link:hover {
   color: #D40000;
@@ -121,6 +124,30 @@ header {
   left: 0;
   top: calc(50% - 12px);
 }
+.nav-social .nav-item:first-child:before {
+  display: none;
+}
+.nav-social .nav-item {
+  position: relative;
+  padding-left: 28px;
+  padding-right: 28px;
+}
+.nav-social .nav-item:last-child {
+  padding-right: 0;
+}
+.nav-social .nav-item::before {
+  content: "";
+  display: block;
+  width: 1px;
+  height: 24px;
+  background-color: rgba(243,242,240,0.5);
+  position: absolute;
+  left: 0;
+  top: calc(50% - 12px);
+}
+.nav-social .nav-link {
+  font-size: 16px;
+}
 .nav-info .nav-item:first-child:before {
   display: none;
 }
@@ -128,7 +155,7 @@ header {
   display: flex;
   justify-content: space-between;
   padding-bottom: 60px;
-  margin-top: 100px;
+  margin-top: 107px;
   border-bottom: 1px solid #F3F2F0;
 }
 .social-item:last-child {
@@ -140,6 +167,12 @@ position: relative;
   align-items: center;
   font-size: 16px;
   font-weight: 700;
+  padding-bottom: 11px;
+  transition: 0.2s border-bottom ease;
+  border-bottom: 2px solid transparent;
+}
+.project:hover {
+  border-bottom: 2px solid #F3F2F0;
 }
 .project-img {
   background-image: url(../img/arrow.svg);
@@ -151,13 +184,14 @@ position: relative;
 .skill {
   display: flex;
   justify-content: space-between;
-  padding-top: 60px;
+  padding-top: 34px;
 }
 .skill-item {
-  flex: 0 0 21%;
+  flex: 0 0 23%;
 }
 .skill .title-h3 {
   text-transform: uppercase;
+  letter-spacing: 0.03em;
 }
 .skill .description {
   line-height: 150%;
@@ -167,24 +201,24 @@ position: relative;
   height: 253px;
   position: absolute;
   left: -128px;
-  top: calc(50% - 126px);
+  top: calc(50% - 137px);
   z-index: 1;
 }
 .triangle {
   position: absolute;
   z-index: 2;
   left: -150px;
-  top: 0;
+  top: -22px;
 }
 .circle-nav {
   width: 106px;
   height: 106px;
   position: absolute;
-  top: calc(50% - 53px);
+  top: calc(50% - 60px);
   right: 38px;
 }
 .section-steps {
-  padding-top: 180px;
+  padding-top: 142px;
   padding-bottom: 100px;
 }
 .steps-item {
@@ -192,23 +226,26 @@ position: relative;
   justify-content: space-between;
   align-items: center;
   line-height: 150%;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 12px;
+  padding-bottom: 12px;
 }
 .steps-title {
   font-size: 28px;
 }
 .steps-title span {
-  margin-right: 45px;
+  margin-right: 40px;
 }
 .steps-description {
   font-size: 16px;
   flex: 0 0 49%;
   max-width: 49%;
 }
+.section-about {
+  padding-top: 80px;
+}
 .about {
   display: grid;
-  grid-template: repeat(3, 1fr)/repeat(4, 1fr);
+  grid-template: 290px/repeat(4, 1fr);
 }
 .about-title {
   grid-column: 1/3;
@@ -218,7 +255,7 @@ position: relative;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   font-weight: 700;
-  padding-top: 62px;
+  padding-top: 90px;
   padding-bottom: 62px;
 }
 .about-description {
@@ -227,29 +264,36 @@ position: relative;
   font-size: 28px;
   line-height: 150%;
   opacity: 0.8;
-  padding: 62px 10px 62px 20px;
+  padding: 90px 10px 62px 12px;
 }
 .about-01 {
   grid-column: 3/4;
   grid-row: 2/3;
-  padding: 65px 20px 35px 20px;
+  padding: 75px 20px 35px 12px;
 }
 .about-02 {
   grid-column: 4/5;
   grid-row: 2/3;
-  padding: 65px 10px 35px 10px;
+  padding: 75px 10px 35px 15px;
 }
 .about-03 {
   grid-column: 3/4;
   grid-row: 3/4;
-  padding: 35px 20px;
+  padding: 18px 12px;
 }
 .about-04 {
   grid-column: 4/5;
   grid-row: 3/4;
-  padding: 35px 10px 35px 10px;
+  padding: 18px 10px 35px 17px;
 }
 .about .description {
   line-height: 150%;
   opacity: 0.8;
+}
+.about-item > p {
+  margin-bottom: 0;
+  margin-top: 0;
+}
+.about-item .title-h3 {
+  margin-bottom: 21px;
 }
