--- a/css/style.css
+++ b/css/style.css
@@ -219,7 +219,7 @@ position: relative;
 }
 .section-steps {
   padding-top: 142px;
-  padding-bottom: 100px;
+  padding-bottom: 132px;
 }
 .steps-item {
   display: flex;
@@ -296,4 +296,97 @@ position: relative;
 }
 .about-item .title-h3 {
   margin-bottom: 21px;
+}
+.portfolio {
+  margin-bottom: 145px;
+  position: relative;
+  z-index: 1;
+}
+.gradient {
+  background: linear-gradient(180deg, #141416 0%, rgba(20, 20, 22, 0) 100%);
+}
+#tabs {
+  position: relative;
+}
+.section-portfolio {
+  position: relative;
+}
+.circle-portfolio {
+  width: 465px;
+  height: 465px;
+  position: absolute;
+  top: -323px;
+  left: 347px;
+}
+.nav-tabs {
+  display: flex;
+  list-style-type: none;
+  padding-left: 0;
+  margin: 0;
+  position: absolute;
+  top: -41px;
+}
+.nav-tabs-item {
+  margin-right: 78px;
+}
+.nav-tabs-link {
+  border-bottom: 2px solid transparent;
+  padding-bottom: 21px;
+  text-decoration: none;
+  color: rgba(243, 242, 240, 0.5);
+  font-size: 16px;
+}
+.nav-tabs-link.active {
+  border-bottom: 2px solid #F3F2F0;
+  color: #F3F2F0;
+}
+.work {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #F3F2F0;
+  padding-top: 61px;
+  padding-bottom: 60px;
+}
+.work-item {
+  flex: 0 0 49%;
+}
+.work-title {
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 150%;
+  margin-top: 0;
+  margin-bottom: 44px;
+}
+.work-list {
+  list-style-type: none;
+  font-size: 16px;
+  opacity: 0.8;
+  padding-left: 0;
+  margin-bottom: 43px;
+}
+.work-list-item {
+  margin-bottom: 16px;
+}
+.work-time {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 150%;
+  opacity: 0.8;
+  margin-bottom: 0;
+}
+.work-thumb {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 315px;
+}
+.work-image {
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  transform: translate(50%, 50%);
+  width: 100%;
+  height: 315px;
+  object-fit: cover;
 }
