--- a/css/style.css
+++ b/css/style.css
@@ -217,6 +217,20 @@ position: relative;
   top: calc(50% - 60px);
   right: 38px;
 }
+.circle-tarif {
+  width: 140px;
+  height: 140px;
+  position: absolute;
+  top: calc(50% - 70px);
+  left: -80px;
+}
+.circle-price {
+  width: 90px;
+  height: 90px;
+  position: absolute;
+  top: calc(50% - 45px);
+  left: -34px;
+}
 .section-steps {
   padding-top: 142px;
   padding-bottom: 132px;
@@ -397,6 +411,7 @@ position: relative;
 }
 .section-advantages {
   padding-top: 150px;
+  padding-bottom: 180px;
 }
 .advantages-text {
   font-size: 28px;
@@ -485,27 +500,47 @@ position: relative;
   border: 10px solid transparent;
   border-bottom: 10px solid #E31B1B;
 }
+.section-tarif {
+  padding-top: 150px;
+}
 .tarif {
   display: grid;
-  grid-template: repeat(4, 1fr)/1fr 1fr;
+  grid-template-columns: 1fr 1fr;
 }
 .tarif-item {
   border-bottom: 1px solid #F3F2F0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-top: 30px;
+  height: 268px;
+  padding-bottom: 64px;
 }
 .tarif-title {
   font-size: 28px;
   line-height: 150%;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  border-bottom: 1px solid #F3F2F0;
+}
+.tarif-title > div {
+  position: relative;
+}
+.tarif-title p {
+  position: relative;
+  z-index: 1;
 }
 .tarif-description {
   font-size: 28px;
   line-height: 150%;
   opacity: 0.8;
+  border-bottom: 1px solid #F3F2F0;
+  padding-bottom: 51px;
 }
 .tarif-name {
   font-size: 28px;
   line-height: 150%;
+  margin-bottom: 20px;
 }
 .tarif-text {
   font-size: 16px;
@@ -519,16 +554,19 @@ position: relative;
   font-weight: 700;
   font-size: 16px;
   line-height: 150%;
+  margin-top: 30px;
+  margin-bottom: 28px;
 }
 .tarif-list {
   list-style-type: none;
-  padding-left: 0;
+  padding-left: 11px;
   margin: 0;
+  font-size: 16px;
 }
 .tarif-list-item {
   position: relative;
-  padding-left: 30px;
-  margin-bottom: 10px;
+  padding-left: 15px;
+  margin-bottom: 13px;
 }
 .tarif-list-item:before {
   content: "";
@@ -545,4 +583,12 @@ position: relative;
   font-weight: 700;
   font-size: 42px;
   line-height: 150%;
+}
+.tarif-footer {
+  position: relative;
+}
+.tarif-footer p {
+  position: relative;
+  z-index: 1;
+  margin: 0;
 }
