--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,7 @@ position: relative;
 }
 .about {
   display: grid;
-  grid-template: 290px/repeat(4, 1fr);
+  grid-template: 316px/repeat(4, 1fr);
 }
 .about-title {
   grid-column: 1/3;
@@ -283,12 +283,12 @@ position: relative;
 .about-01 {
   grid-column: 3/4;
   grid-row: 2/3;
-  padding: 75px 20px 35px 12px;
+  padding: 49px 20px 35px 12px;
 }
 .about-02 {
   grid-column: 4/5;
   grid-row: 2/3;
-  padding: 75px 10px 35px 15px;
+  padding: 49px 10px 10px 15px;
 }
 .about-03 {
   grid-column: 3/4;
@@ -338,7 +338,7 @@ position: relative;
   padding-left: 0;
   margin: 0;
   position: absolute;
-  top: -62px;
+  top: -41px;
 }
 .nav-tabs-item {
   margin-right: 78px;
@@ -592,9 +592,16 @@ position: relative;
   z-index: 1;
   margin: 0;
 }
+.section-form {
+  padding-top: 92px;
+  padding-bottom: 128px;
+}
 .form {
   display: grid;
   grid-template-columns: 1fr 1fr;
+}
+.form-item {
+  padding-top: 60px;
 }
 .form-title {
   font-size: 28px;
@@ -602,13 +609,14 @@ position: relative;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   border-bottom: 1px solid #F3F2F0;
+  position: relative;
 }
 .form-description {
   font-size: 28px;
   line-height: 150%;
   opacity: 0.8;
   border-bottom: 1px solid #F3F2F0;
-  padding-bottom: 51px;
+  padding-bottom: 31px;
 }
 form {
   font-size: 12px;
@@ -616,20 +624,104 @@ form {
 }
 form label {
   opacity: 0.8;
+  display: block;
+  margin-bottom: 12px;
 }
 form input {
   width: 100%;
-  padding: 24px 20px 23px;
-  background-color: rgba(24, 20, 13, 0.1);
+  padding: 26px 20px 26px;
+  background-color: #38383A;
   border: none;
   box-sizing: border-box;
+  margin-bottom: 18px;
+  color: #F3F2F0;
+}
+form input:focus {
+  outline: none;
+}
+form input[type=submit] {
+  background: #D40000;
+  color: #F3F2F0;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 150%;
+  padding: 21px 0;
+  margin-bottom: 0;
 }
 form select {
   width: 100%;
 }
+.form-item .nav-item:first-child {
+  padding-left: 0;
+}
 .ui-selectmenu-button.ui-button {
   width: 100%;
-  background-color: rgba(24, 20, 13, 0.1);
-  padding: 24px 20px 23px;
+  background-color:#38383A;
+  padding: 25px 20px 25px;
   color: #fff;
+  margin-bottom: 35px;
+  box-sizing: border-box;
+  border-radius: 0;
+}
+.ui-button:hover, .ui-button:focus {
+  border: none;
+  outline: none;
+}
+.ui-selectmenu-menu .ui-menu {
+  background-color: #38383A;
+  color: rgba(243, 242, 240, 0.4);
+  font-size: 12px;
+}
+.ui-selectmenu-menu .ui-menu .ui-menu-item {
+  padding: 10px 20px;
+}
+.ui-selectmenu-menu .ui-menu .ui-menu-item:hover {
+  color: rgba(243, 242, 240, 1);
+  padding: 10px 20px;
+}
+.form-social {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+footer {
+  border-top: 1px solid #F3F2F0;
+}
+.footer-top {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 65px;
+}
+.footer-bottom {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 44px;
+  padding-bottom: 42px;
+}
+.footer-bottom p {
+  margin: 0;
+  color: rgba(243, 242, 240, 0.3);
+}
+.footer-link {
+  color: rgba(243, 242, 240, 0.3);
+  border-bottom: rgba(243, 242, 240, 0.3);
+  transition: 0.2s ease;
+  text-decoration: none;
+}
+.footer-link:hover {
+  color: rgba(243, 242, 240, 1);
+  border-bottom: rgba(243, 242, 240, 1);
+}
+.circle-form {
+  width: 300px;
+  height: 300px;
+  position: absolute;
+  fill: #D40000;
+  left: -152px;
+}
+.triangle-form {
+  position: absolute;
+  fill: #fff;
+  top: 52px;
+  left: -176px;
 }
