--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,168 @@ body {
 .dark .steps-item:first-child {
   border-top: 1px solid #F3F2F0;
 }
+.dark .gradient {
+  background: linear-gradient(180deg, #141416 0%, rgba(20, 20, 22, 0) 100%);
+}
+.dark .nav-tabs-link {
+  color: rgba(243, 242, 240, 0.5);
+}
+.dark .nav-tabs-item.ui-state-active .nav-tabs-link {
+  border-bottom: 2px solid #F3F2F0;
+  color: #F3F2F0;
+}
+.dark .work {
+  border-bottom: 1px solid #F3F2F0;
+}
+.dark .advantages {
+  border-top: 1px solid #F3F2F0;
+}
+.dark .tech-item {
+  border-bottom: 1px solid  rgba(243, 242, 240, 0.3);
+  border-right: 1px solid  rgba(243, 242, 240, 0.3);
+}
+.dark .tech-item:first-child,
+.dark .tech-item:nth-child(5) {
+  border-left: 1px solid rgba(243, 242, 240, 0.3);
+}
+.dark .html,
+.dark .css,
+.dark .js,
+.dark .jquery {
+  border-top: 1px solid rgba(243, 242, 240, 0.3);
+}
+.dark .tarif-title,
+.dark .tarif-description {
+  border-bottom: 1px solid #F3F2F0;
+}
+.dark .tarif-item {
+  border-bottom: 1px solid #F3F2F0;
+}
+.dark form input {
+  background-color: #38383A;
+  color: #F3F2F0;
+}
+.dark .ui-selectmenu-button.ui-button {
+  background-color: #38383A;
+  color: #fff;
+}
+.dark footer {
+  border-top: 1px solid #F3F2F0;
+}
+.dark .footer-bottom p {
+  color: rgba(243, 242, 240, 0.3);
+}
+.dark .nav-social .nav-item::before {
+  content: "";
+  display: block;
+  background-color: rgba(243,242,240,0.5);
+}
+.dark .footer-link {
+  color: rgba(243, 242, 240, 0.3);
+}
+.dark .nav-info .nav-item::before {
+  content: "";
+  display: block;
+  background-color: rgba(243,242,240,0.5);
+}
+.dark .nav-tabs-item.ui-state-active .nav-tabs-link {
+  border-bottom: 2px solid #F3F2F0;
+}
+.dark .ui-selectmenu-menu .ui-menu .ui-menu-item {
+  background-color: #38383A;
+  color: rgba(243, 242, 240, 0.4);
+}
+.dark .ui-selectmenu-menu .ui-menu .ui-menu-item:hover {
+  color: rgba(243, 242, 240, 1);
+}
+.dark .form-item {
+  border-top: 1px solid #F3F2F0;
+}
+.light .form-item {
+  border-top: 1px solid #010101;
+}
+.light .ui-selectmenu-menu .ui-menu .ui-menu-item {
+  background: #E7E6E4;
+  color: rgba(1, 1, 1, 0.4);
+}
+.light .ui-selectmenu-menu .ui-menu .ui-menu-item:hover {
+  color:rgba(1, 1, 1, 1);
+}
+.light .nav-tabs-item.ui-state-active .nav-tabs-link {
+  border-bottom: 2px solid #010101;
+}
+.light .nav-info .nav-item::before {
+  content: "";
+  display: block;
+  background-color: rgba(1, 1, 1, 0.2);
+}
+.light .footer-link {
+  color: rgba(1, 1, 1, 0.3);
+  border-bottom: 1px solid rgba(1, 1, 1, 0.3);
+}
+.light .footer-link:hover {
+  color: #010101;
+  border-bottom: 1px solid #000;
+}
+.light .nav-social .nav-item::before {
+  content: "";
+  display: block;
+  background-color: rgba(1,1,1,0.2);
+}
+.light .footer-bottom p {
+  color: rgba(1, 1, 1, 0.3);
+}
+.light footer {
+  border-top: 1px solid #010101;
+}
+.light .ui-selectmenu-button.ui-button {
+  background-color: #E7E6E4;
+  color:#010101;
+}
+.light form input {
+  background-color: #E7E6E4;
+  color:rgba(1, 1, 1, 0.2);
+}
+.light .tarif-item {
+  border-bottom: 1px solid#010101;
+}
+.light .tarif-title,
+.light .tarif-description {
+  border-bottom: 1px solid #010101;
+}
+.light .tech-item {
+  border-bottom: 1px solid rgba(1, 1, 1, 0.3);
+  border-right: 1px solid rgba(1, 1, 1, 0.3);
+}
+.light .tech-item:first-child,
+.light .tech-item:nth-child(5) {
+  border-left: 1px solid rgba(1, 1, 1, 0.3);
+}
+.light .html,
+.light .css,
+.light .js,
+.light .jquery {
+  border-top: 1px solid rgba(1, 1, 1, 0.3);
+}
+.light .tech-item {
+  border-bottom: 1px solid rgba(1, 1, 1, 0.3);
+  border-right: 1px solid rgba(1, 1, 1, 0.3);
+}
+.light .advantages {
+  border-top: 1px solid#010101;
+}
+.light .work {
+  border-bottom: 1px solid #010101;
+}
+.light .nav-tabs-link {
+  color: rgba(1, 1, 1, 0.4);
+}
+.light .nav-tabs-item.ui-state-active .nav-tabs-link {
+  color: #010101;
+}
+.light .gradient {
+  background: linear-gradient(180deg, #E7E6E6 0%, rgba(231, 230, 230, 0) 100%);
+}
 .light .circle circle {
   fill: #fff;
 }
@@ -48,6 +210,9 @@ body {
 }
 .light .steps-item:first-child {
   border-top: 1px solid #010101;
+}
+.light .triangle-form {
+  fill: #D40000;
 }
 .wrapper {
   max-width: 1140px;
@@ -80,6 +245,18 @@ body {
 .photo {
   margin-bottom: 95px;
   width: 100%;
+  height: 310px;
+  position: relative;
+  overflow: hidden;
+}
+.photo img {
+  width: 100%;
+  height: 310px;
+  position: absolute;
+  left: -50%;
+  top: -50%;
+  transform: translate(50%, 50%);
+  object-fit: cover;
 }
 header {
   display: flex;
@@ -183,11 +360,13 @@ position: relative;
 }
 .skill {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   padding-top: 34px;
 }
 .skill-item {
-  flex: 0 0 23%;
+  flex: 0 0 22%;
+  margin-right: 3%;
 }
 .skill .title-h3 {
   text-transform: uppercase;
@@ -245,6 +424,7 @@ position: relative;
 }
 .steps-title {
   font-size: 28px;
+  line-height: 150%;
 }
 .steps-title span {
   margin-right: 40px;
@@ -259,7 +439,7 @@ position: relative;
 }
 .about {
   display: grid;
-  grid-template: 316px/repeat(4, 1fr);
+  grid-template-columns: repeat(4, 1fr);
 }
 .about-title {
   grid-column: 1/3;
@@ -316,9 +496,6 @@ position: relative;
   position: relative;
   z-index: 1;
 }
-.gradient {
-  background: linear-gradient(180deg, #141416 0%, rgba(20, 20, 22, 0) 100%);
-}
 #tabs {
   position: relative;
 }
@@ -348,12 +525,7 @@ position: relative;
   padding-top: 21px;
   padding-bottom: 21px;
   text-decoration: none;
-  color: rgba(243, 242, 240, 0.5);
   font-size: 16px;
-}
-.nav-tabs-item.ui-state-active .nav-tabs-link {
-  border-bottom: 2px solid #F3F2F0;
-  color: #F3F2F0;
 }
 .nav-tabs-link:focus,
 .nav-tabs-item:focus {
@@ -361,9 +533,9 @@ position: relative;
 }
 .work {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid #F3F2F0;
   padding-top: 61px;
   padding-bottom: 60px;
 }
@@ -456,13 +628,11 @@ position: relative;
   grid-template: 148px 148px/repeat(4, 1fr);
 }
 .tech-item {
-  border-bottom: 1px solid rgba(243, 242, 240, 0.3);
-  border-right: 1px solid rgba(243, 242, 240, 0.3);
   display: flex;
   justify-content: center;
 }
-.html, .css, .js, .jquery {
-  border-top: 1px solid rgba(243, 242, 240, 0.3);
+.jquery .tech-image {
+  width: 72px;
 }
 .tech-image {
   filter: grayscale(100%);
@@ -470,10 +640,6 @@ position: relative;
 }
 .tech-item:hover .tech-image {
   filter: grayscale(0);
-}
-.tech-item:first-child,
-.tech-item:nth-child(5) {
-  border-left: 1px solid rgba(243, 242, 240, 0.3);
 }
 .ui-tooltip {
   background-color: #E31B1B;
@@ -507,8 +673,10 @@ position: relative;
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
+.tarif-header {
+  padding-right: 15px;
+}
 .tarif-item {
-  border-bottom: 1px solid #F3F2F0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -521,7 +689,6 @@ position: relative;
   line-height: 150%;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  border-bottom: 1px solid #F3F2F0;
 }
 .tarif-title > div {
   position: relative;
@@ -529,12 +696,12 @@ position: relative;
 .tarif-title p {
   position: relative;
   z-index: 1;
+  font-weight: 700;
 }
 .tarif-description {
   font-size: 28px;
   line-height: 150%;
   opacity: 0.8;
-  border-bottom: 1px solid #F3F2F0;
   padding-bottom: 51px;
 }
 .tarif-name {
@@ -602,20 +769,23 @@ position: relative;
 }
 .form-item {
   padding-top: 60px;
+  border-top: 1px solid #010101;
 }
 .form-title {
   font-size: 28px;
   line-height: 150%;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  border-bottom: 1px solid #F3F2F0;
+  position: relative;
+  font-weight: 700;
+}
+.form-title p {
   position: relative;
 }
 .form-description {
   font-size: 28px;
   line-height: 150%;
   opacity: 0.8;
-  border-bottom: 1px solid #F3F2F0;
   padding-bottom: 31px;
 }
 form {
@@ -630,11 +800,9 @@ form label {
 form input {
   width: 100%;
   padding: 26px 20px 26px;
-  background-color: #38383A;
   border: none;
   box-sizing: border-box;
   margin-bottom: 18px;
-  color: #F3F2F0;
 }
 form input:focus {
   outline: none;
@@ -647,6 +815,11 @@ form input[type=submit] {
   line-height: 150%;
   padding: 21px 0;
   margin-bottom: 0;
+  transition: 0.2s ease;
+}
+form input[type=submit]:hover {
+  background: #EA0E00;
+  cursor: pointer;
 }
 form select {
   width: 100%;
@@ -676,13 +849,13 @@ form select {
   padding: 10px 20px;
 }
 .ui-selectmenu-menu .ui-menu .ui-menu-item:hover {
-  color: rgba(243, 242, 240, 1);
   padding: 10px 20px;
 }
 .form-social {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  z-index: 1;
 }
 footer {
   border-top: 1px solid #F3F2F0;
@@ -690,11 +863,13 @@ footer {
 .footer-top {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   padding-top: 65px;
 }
 .footer-bottom {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   padding-top: 44px;
   padding-bottom: 42px;
 }
@@ -703,7 +878,6 @@ footer {
   color: rgba(243, 242, 240, 0.3);
 }
 .footer-link {
-  color: rgba(243, 242, 240, 0.3);
   border-bottom: rgba(243, 242, 240, 0.3);
   transition: 0.2s ease;
   text-decoration: none;
@@ -724,4 +898,500 @@ footer {
   fill: #fff;
   top: 52px;
   left: -176px;
+}
+@media (min-width: 901px) {
+  .header-mobile {
+    display: none;
+  }
+}
+@media (max-width: 900px) {
+  header {
+    display: none;
+  }
+  .header-mobile {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+  .circle-main {
+    width: 200px;
+    height: 200px;
+    left: -99px;
+    top: calc(50% - 100px)
+  }
+  .triangle {
+    left: 0;
+    top: inherit;
+    bottom: -80px;
+    width: 48px;
+  }
+  .menu {
+    background: transparent;
+    border: none;
+  }
+  .title-h1 {
+    font-size: 50px;
+  }
+  .name {
+    font-size: 20px;
+  }
+  .main .title-h1 {
+    margin-top: 28px;
+  }
+  .social {
+    margin-top: 145px;
+  }
+  .skill {
+    justify-content: space-between;
+  }
+  .skill-item {
+    flex: 0 0 47%;
+    margin-right: 3%;
+    padding-bottom: 20px;
+  }
+  .about {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .about-description {
+    grid-column: 1/3;
+    grid-row: 2/3;
+  }
+  .about-01 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
+  .about-02 {
+    grid-column: 2/3;
+    grid-row: 3/4;
+  }
+  .about-03 {
+    grid-column: 1/2;
+    grid-row: 4/5;
+  }
+  .about-04 {
+    grid-column: 2/3;
+    grid-row: 4/5;
+  }
+  .steps-title {
+    font-size: 20px;
+    padding-right: 25px;
+  }
+  .nav-tabs {
+    justify-content: space-around;
+    width: 100%;
+  }
+  .nav-tabs-item {
+    margin-right: 0;
+  }
+  .ui-helper-clearfix:before, .ui-helper-clearfix:after {
+    display: none;
+  }
+  .circle-portfolio {
+    left: inherit;
+    right: 29px;
+    top: -341px;
+  }
+  .work {
+    padding-bottom: 0;
+  }
+  .work-item {
+    flex: 0 0 100%;
+    padding-bottom: 56px;
+  }
+  .advantages {
+    grid-template-columns: 1fr 1fr;
+  }
+  .tarif-title {
+    grid-column: 1/3;
+    grid-row: 1/2;
+    border-bottom: none;
+  }
+  .tarif-description {
+    grid-column: 1/3;
+    grid-row: 2/3;
+  }
+  .circle-tarif {
+    width: 250px;
+    height: 250px;
+    top: calc(50% - 125px);
+    left: -155px;
+  }
+  .form {
+    grid-template-columns: 1fr;
+  }
+  .form-title {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+  .form-description {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+  .form-item {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
+  .form-social {
+    grid-row: 4/5;
+    align-items: center;
+  }
+  .circle-form {
+    left: -135px;
+    top: -34px;
+  }
+  .triangle-form {
+    bottom: inherit;
+    top: -54px;
+    left: 92px;
+    width: 35px;
+  }
+  .footer-top {
+    flex-direction: column-reverse;
+  }
+  .footer-top .nav,
+  .footer-bottom>p {
+    flex-basis: 100%;
+  }
+  .footer-top .nav {
+    display: flex;
+    justify-content: space-between;
+  }
+  .footer-top .nav-info {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 30px;
+  }
+  .footer-bottom>p {
+    text-align: center;
+    padding-bottom: 20px;
+  }
+}
+@media (max-width: 600px) {
+  .tech-image,
+  .jquery .tech-image {
+    width: 50px;
+  }
+  .tech {
+    grid-template: 120px 120px/repeat(4, 1fr);
+  }
+  .advantages {
+    grid-template-columns: 1fr;
+  }
+  .steps-description {
+    flex: 0 0 100%;
+    min-width: 100%;
+  }
+  .steps-item {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .steps-title {
+    padding-right: 0;
+    margin-bottom: 0;
+  }
+  .tarif {
+    grid-template-columns: 1fr;
+  }
+  .tarif-item {
+    grid-column: 1/2;
+    height: inherit;
+  }
+  .tarif-left {
+    border-bottom: none!important;
+    padding-bottom: 0;
+  }
+  .circle-price {
+    top: 0;
+  }
+  .title-h1 {
+    font-size: 40px;
+  }
+  .name {
+    font-size: 18px;
+  }
+  .main .title-h1 {
+    margin-top: 18px;
+  }
+}
+@media (max-width: 550px) {
+  .wrapper {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .header-mobile {
+    padding-top: 18px;
+    padding-bottom: 38px;
+  }
+  .menu {
+    padding-right: 0;
+  }
+  .photo {
+    margin-bottom: 64px;
+  }
+  .photo,
+  .photo img {
+    height: 215px;
+  }
+  .title-h1 {
+    font-size: 28px;
+    line-height: 34px;
+  }
+  .circle-main {
+    width: 135px;
+    height: 135px;
+    top: calc(50% - 67px);
+    left: -52px;
+  }
+  .circle-nav {
+    width: 60px;
+    height: 60px;
+    top: -23px;
+    right: 28px;
+  }
+  .main .title-h1 {
+    margin-top: 23px;
+  }
+  .social {
+    margin-top: 104px;
+    padding-bottom: 30px;
+  }
+  .nav-social .nav-item {
+    padding-left: 9px;
+    padding-right: 9px;
+  }
+  .nav-social .nav-item::before {
+    height: 16px;
+    top: calc(50% - 9px);
+  }
+  .skill {
+    padding-top: 30px;
+  }
+  .skill .title-h3 {
+    margin-bottom: 18px;
+  }
+  .skill-item {
+    padding-bottom: 10px;
+  }
+  .section-about {
+    padding-top: 0;
+  }
+  .about-title {
+    padding-top: 43px;
+    padding-bottom: 0px;
+    border-bottom: none!important;
+  }
+  .about-description {
+    padding: 20px 10px 39px 0px;
+  }
+  .about-item .title-h3 {
+    margin-bottom: 18px;
+  }
+  .about-01 {
+    padding: 30px 20px 22px 0px;
+  }
+  .about-02 {
+    padding: 30px 10px 6px 0px;
+  }
+  .about-03 {
+    padding: 0;
+  }
+  .about-04 {
+    padding: 0;
+  }
+  .section-steps {
+    padding-top: 57px;
+  }
+  .steps-item {
+    padding-top: 0;
+  }
+  .steps-title span {
+    margin-right: 10px;
+  }
+  .portfolio {
+    margin-bottom: 78px;
+  }
+  .circle-portfolio {
+    right: 0px;
+    top: -147px;
+    width: 197px;
+    height: 197px;
+  }
+  .circle-tarif {
+    width: 138px;
+    height: 138px;
+    left: -86px;
+    top: calc(50% - 69px);
+  }
+  .circle-price {
+    top: -4px;
+    width: 40px;
+    height: 40px;
+    left: -20px;
+  }
+  .circle-form {
+    left: -54px;
+    top: -38px;
+    width: 190px;
+    height: 190px;
+  }
+  .triangle-form {
+    top: -52px;
+    left: 97px;
+    width: 29px;
+  }
+  .section-tarif {
+    padding-top: 63px;
+  }
+  .dark .tarif-title {
+    border-bottom: none;
+  }
+  .tarif-description p {
+    margin-top: 4px;
+  }
+  .tarif-description {
+    padding-bottom: 13px;
+  }
+  .tarif-name {
+    margin-top: 10px;
+  }
+  .tarif-item {
+    padding-top: 0;
+  }
+  .triangle {
+    left: 0;
+    bottom: -69px;
+    width: 33px;
+  }
+  .nav-tabs-link {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+  .work {
+    padding-top: 32px;
+  }
+  .work-title {
+    margin-bottom: 22px;
+  }
+  .work-list {
+    margin-bottom: 21px;
+  }
+  .work-item {
+    padding-bottom: 40px;
+  }
+  .work-thumb,
+  .work-image {
+    height: 190px;
+  }
+  .section-advantages {
+    padding-top: 63px;
+  }
+  .advantages-image svg {
+    width: 30px;
+    height: 30px;
+  }
+  .advantages {
+    padding-top: 41px;
+    grid-gap: 31px;
+  }
+  .advantages-text {
+    margin-bottom: 39px;
+  }
+  .advantages .title-h3 {
+    margin-bottom: 16px;
+  }
+  .section-advantages {
+    padding-bottom: 60px;
+  }
+  .tech-image, .jquery .tech-image {
+    width: 22px;
+  }
+  .tech {
+    grid-template: 44px 44px/repeat(4, 1fr);
+  }
+  .form-description p {
+    margin-top: 3px;
+  }
+  .form-description {
+    padding-bottom: 12px;
+  }
+  .form-item {
+    padding-top: 39px;
+    padding-bottom: 22px;
+  }
+  form label {
+    margin-bottom: 6px;
+  }
+  form input {
+    padding: 22px 20px 23px;
+  }
+  .ui-selectmenu-button.ui-button {
+    padding: 20px 20px 20px;
+    margin-bottom: 30px;
+  }
+  form input[type=submit] {
+    padding: 18px 0;
+  }
+  .section-form {
+    padding-bottom: 38px;
+  }
+  .footer-top {
+    padding-top: 48px;
+  }
+  .nav-item {
+    padding-left: 7px;
+    padding-right: 7px;
+  }
+  .footer-bottom {
+    padding-top: 33px;
+    padding-bottom: 25px;
+  }
+  .project,
+  .nav-social .nav-link,
+  .title-h3,
+  .steps-description,
+  .work-list,
+  .work-time,
+  .advantages-description,
+  .tarif-pack,
+  .tarif-list,
+  form input[type=submit] {
+    font-size: 12px;
+  }
+  .skill,
+  .about-item,
+  .nav-link,
+  .tarif-text,
+  form input,
+  form label,
+  .ui-selectmenu-text
+  .footer-top .nav-link,
+  .footer-bottom {
+    font-size: 10px;
+  }
+  .about-title,
+  .about-description,
+  .steps-title,
+  .work-title,
+  .advantages-text,
+  .tarif-title,
+  .tarif-description,
+  .tarif-name,
+  .form-title,
+  .form-description {
+    font-size: 16px;
+  }
+  .tarif-price {
+    font-size: 22px;
+  }
+  .footer-top .nav-info {
+    font-size: 14px;
+  }
+  .nav-tabs {
+    justify-content: space-between;
+  }
+  
 }
