--- a/css/style.css
+++ b/css/style.css
@@ -660,6 +660,7 @@ position: relative;
 .tech-image {
   filter: grayscale(100%);
   transition: 0.2s ease;
+  width: 84px;
 }
 .tech-item:hover .tech-image {
   filter: grayscale(0);
@@ -971,8 +972,10 @@ footer {
   .active {
     display: block;
   }
-  .menu {
+  .menu-btn {
     outline: none;
+    background: transparent;
+    border: none;
   }
   .burger-open-nav {
     list-style-type: none;
@@ -1012,10 +1015,6 @@ footer {
     top: inherit;
     bottom: -80px;
     width: 48px;
-  }
-  .menu {
-    background: transparent;
-    border: none;
   }
   .title-h1 {
     font-size: 50px;
@@ -1152,6 +1151,59 @@ footer {
   .footer-bottom>p {
     text-align: center;
     padding-bottom: 20px;
+  }
+  .menu-btn {
+    width: 29px;
+    height: 24px;
+    background: transparent;
+    border: none;
+    padding: 0;
+    position: relative;
+    z-index: 5;
+  }
+  .menu-btn__item {
+    width: 100%;
+    height: 2px;
+    background: #E7E6E4;
+    display: block;
+    display: flex;
+    position: relative;
+    align-items: center;
+  }
+  .menu-btn:after,
+  .menu-btn:before {
+    content: '';
+    width: 29px;
+    height: 2px;
+    background: #E7E6E4;
+    display: block;
+    position: absolute;
+  }
+  .menu-btn:after {
+    top: 0;
+  }
+  .menu-btn:before {
+    bottom: 0;
+  }
+  .menu-btn:focus {
+    outline: none;
+  }
+  .menu-btn.active::before {
+    transform: rotate(45deg);
+    top: 11px;
+    transition: 0.2s ease;
+  }
+  .menu-btn.active::after {
+    transform: rotate(-45deg);
+    top: 11px;
+    transition: 0.2s ease;
+  }
+  .menu-btn.active span {
+    transform: scale(0);
+    transition: 0.2s ease;
+  }
+  .active {
+    
   }
 }
 @media (max-width: 600px) {
